--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,11 @@ repository = "https://github.com/PocketRelay/PocketRelayClientShared"
 log = "0.4"
 env_logger = "0.10"
 
-# HTTP client (TODO: Test using rustls)
-reqwest = { version = "0.11", features = ["json"] }
+# HTTP client (native-tls is required for client auth)
+reqwest = { version = "0.11", default-features = false, features = [
+    "json",
+    "native-tls",
+] }
 
 # Serialization
 serde = { version = "1", features = ["derive"] }
