feat: improved error handling, split apart tunnel creation logic, use shared codec crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ repository = "https://github.com/PocketRelay/PocketRelayClientShared"
 
 
 [dependencies]
+# Shared UDP tunnel protocol
+pocket-relay-udp-tunnel = { version = "0" }
+
 # Logging
 log = "0.4"
 
